--- a/netlify.toml
+++ b/netlify.toml
@@ -14,6 +14,7 @@
   to = "https://kumu.io/factorenmodel-dev/search-taal-demo"
   force = true
 
+[[redirects]]
   from = "/stevige-start-demo"
   to = "https://kumu.io/factorenmodel-dev/stevige-start-demo"
   force = true
