--- a/netlify.toml
+++ b/netlify.toml
@@ -10,12 +10,12 @@
   command = "yarn build:preview"
 
 [[redirects]]
-  from = "/search-taal-demo"
+  from = "/dev/search-taal-demo"
   to = "https://kumu.io/factorenmodel-dev/search-taal-demo"
   force = true
 
 [[redirects]]
-  from = "/stevige-start-demo"
+  from = "/dev/stevige-start-demo"
   to = "https://kumu.io/factorenmodel-dev/stevige-start-demo"
   force = true
   
